@startuml Samples

' Configuracion de la plantilla (skin tradicional y fuente Excel)
skin rose
skinparam classFontName Calibri
skinparam shadowing false

' @title Patrón de diseño Mediador
' @description El patrón de diseño Mediador es un patrón de comportamiento que 
'              permite reducir las dependencias entre objetos al encapsular la
'              forma en que estos interactúan entre sí. El patrón de diseño
'              Mediador define un objeto que encapsula la forma en que un
'              conjunto de objetos interactúan. El patrón de diseño Mediador
'              promueve el acoplamiento débil al evitar que los objetos se
'              refieran explícitamente entre sí y permite variar su interacción
'              de forma independiente.
' @author Gerardo Tordoya
' @version 1.0
' @date 2022-09-21

title Patrón de diseño Mediador

interface IColega
{
    + Informa()
    + Actualiza()
}

class Mediador
class Colega

IColega <|.. Colega
Colega "0..*"--o Mediador
Colega -- Mediador

caption youtu.be/s4j92Rj7TJk

@enduml